Revision history for {{$dist->name}}

{{$NEXT}}

0.5       2012-10-02 15:53:35 America/New_York
  - Fix glaring error in the documentation SYNOPSIS

0.4       2012-10-02 15:26:59 America/New_York
  - Fix typeo which broke when passing in hashref to constructor (GH#1)

0.3       2012-10-02 13:42:28 America/New_York
  - documentation fixes
  - re-enable on_error.t for newer perl

0.2       2012-10-02 09:16:57 EST5EDT
  - disabled unreliable test

0.1       2012-10-02 01:20:45 EST5EDT
  - initial version